@@ -7,6 +7,7 @@
   </td>
   <td>
     <%= fund_formula.rule_type %>
+    (<%= fund_formula.rule_for %>)
   </td>
   <td>
     <%= fund_formula.commitment_type %>
