@@ -45,6 +45,14 @@
       For
     </td>
     <td>
+      <%= @fund_formula.rule_for %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      For
+    </td>
+    <td>
       <%= @fund_formula.commitment_type %>
     </td>
   </tr>
